# resonantBERT-mycopy-

./: .gitattributes  README.md  generate_ltr_dataset.py  pyproject.toml
app/: app.py  main.py  schemas.py
bbc_articles/articles/: bbc_2017_001.yaml  bbc_2017_002.yaml  bbc_2017_003.yaml  bbc_2017_004.yaml  bbc_2017_005.yaml  bbc_2017_006.yaml  bbc_2017_007.yaml  bbc_2017_008.yaml  bbc_2017_009.yaml  bbc_2017_010.yaml  bbc_2017_011.yaml  bbc_2017_012.yaml  bbc_2017_013.yaml  bbc_2017_014.yaml  bbc_2017_015.yaml  bbc_2017_016.yaml  bbc_2017_017.yaml  bbc_2017_018.yaml  bbc_2017_019.yaml  bbc_2017_020.yaml  bbc_2017_021.yaml  bbc_2017_022.yaml  bbc_2017_023.yaml  bbc_2017_024.yaml  bbc_2017_025.yaml  bbc_2017_026.yaml  bbc_2017_027.yaml  bbc_2017_028.yaml  bbc_2017_029.yaml  bbc_2017_030.yaml  bbc_2017_031.yaml  bbc_2017_032.yaml  bbc_2017_033.yaml  bbc_2017_034.yaml  bbc_2017_035.yaml  bbc_2017_036.yaml  bbc_2017_037.yaml  bbc_2017_038.yaml  bbc_2017_039.yaml  bbc_2017_040.yaml  (+159780 more)
cnn_mass_dataset/: checkpoint_backup.json
cnn_mass_dataset/2017/: cnn_2017_00039.yaml  cnn_2017_00040.yaml  cnn_2017_00041.yaml  cnn_2017_00042.yaml  cnn_2017_00043.yaml  cnn_2017_00044.yaml  cnn_2017_00045.yaml  cnn_2017_00046.yaml  cnn_2017_00047.yaml  cnn_2017_00048.yaml  cnn_2017_00049.yaml  cnn_2017_00050.yaml  cnn_2017_00051.yaml  cnn_2017_00052.yaml  cnn_2017_00053.yaml  cnn_2017_00054.yaml  cnn_2017_00055.yaml  cnn_2017_00056.yaml  cnn_2017_00057.yaml  (+110 more)
data/: huggingfacedata.py
model/: loader.py  ranker.py  scorer.py
resonant_bert/: __init__.py  inference.py  model.py  train.py
(+18879 files in other folders)
