[project]
name = "viralbert-ranking"
version = "0.1.0"
description = "News article ranking system using ViralBERT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
